--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
     <title>News website </title>
     <style>
+        body {
+            background-color:#bd89fb;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%236d1663' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 
-        background-color:#bd89fb;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%236d1663' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+        }
+
     </style>
 </head>
 <body>
@@ -23,7 +26,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav bg-transparent">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
@@ -37,7 +40,7 @@
         </ul>
     </div>
 </nav>
-<div class="container">
+<div class="container mt-5">
 
 
 
@@ -46,10 +49,10 @@
         <p class="lead">Go lang studying assignment</p>
         <hr class="my-4">
         <p>assignment submitted by 20007,20019,20010</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">View code</a>
+        <a class="btn btn-primary btn-lg" href="https://github.com/mcsoverlavdan/dslabass" role="button">View code</a>
     </div>
 
-    <ul class="list-group">
+    <ul class="list-group shadow-lg p-3 mb-5 bg-white rounded">
         {{range $element := .News}}
         <li class="list-group-item">
 
@@ -62,7 +65,8 @@
                 <div class="card-body">
                     <h5 class="card-title">{{$element.Title}}</h5>
                     <p class="card-text">{{$element.Description}}</p>
-                    <a href={{$element.Link}} class="btn btn-primary">Know more</a>
+                    <a href="{{$element.Link}}" target="_blank" class="btn btn-primary">Know more</a>
+
                 </div>
                 <div class="card-footer text-muted">
                     {{$element.PubDate}}
